tests/baselines/reference/parserMemberVariableDeclaration4.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration4.ts(2,3): error TS1031: 'export' modifier cannot appear on class elements of this kind.


==== tests/cases/conformance/parser/ecmascript5/MemberVariableDeclarations/parserMemberVariableDeclaration4.ts (1 errors) ====
    class C {
      export Foo;
      ~~~~~~
!!! error TS1031: 'export' modifier cannot appear on class elements of this kind.
    }